spacing fix

--- a/scss/components/_add.scss
+++ b/scss/components/_add.scss
@@ -96,7 +96,7 @@
       text-align: center;
       letter-spacing: 3px;
       font-size: 2rem;
-      margin-top: 1rem;
+      margin-bottom: 1rem;
     }
   }
 }
