--- a/styles/main.css
+++ b/styles/main.css
@@ -521,4 +521,4 @@ a {
       text-align: center;
       letter-spacing: 3px;
       font-size: 2rem;
-      margin-top: 1rem; }
+      margin-bottom: 1rem; }
